@@ -1,7 +1,7 @@
-@comment $NetBSD: PLIST,v 1.2 2005/10/26 17:30:31 joerg Exp $
+@comment $NetBSD: PLIST,v 1.3 2009/06/14 17:32:23 joerg Exp $
 bin/toolame
-share/doc/html/toolame/changes.html
-share/doc/html/toolame/default.html
-share/doc/html/toolame/psycho.html
-share/doc/html/toolame/readme.html
-share/doc/html/toolame/vbr.html
+share/doc/toolame/changes.html
+share/doc/toolame/default.html
+share/doc/toolame/psycho.html
+share/doc/toolame/readme.html
+share/doc/toolame/vbr.html
