@@ -1,9 +1,9 @@
-$NetBSD: distinfo,v 1.6 2011/09/04 21:20:06 dholland Exp $
+$NetBSD: distinfo,v 1.7 2011/09/04 21:26:53 dholland Exp $
 
 SHA1 (toolame-02l.tgz) = 9f58345ec5d552f49a9ad598e6eb2dc126cb10b4
 RMD160 (toolame-02l.tgz) = 65ff0757f48080093df9e1932b5952199d03f5c6
 Size (toolame-02l.tgz) = 127493 bytes
 SHA1 (patch-aa) = 873031612d0f8bb7f41d49be647f24d73dc15384
 SHA1 (patch-ab) = 97c2c56083f89ef0b999e692db4f38eb405cd3fb
-SHA1 (patch-ac) = 35901599b52f09e6b50db7fde81d3332271eb0ef
+SHA1 (patch-ac) = 19bb07ddc04eb8ad1a365fb1324fc1149a176926
 SHA1 (patch-psycho__1_c) = c659e1f7c247d162e270565b9441ac6bd4e0aaaf
