@@ -1,7 +1,7 @@
-$NetBSD: patch-ac,v 1.2 2005/07/30 11:30:03 grant Exp $
+$NetBSD$
 
-- configure for pkgsrc
-- INLINE should/must be blank based on how it's (inappropriately) used
+configure for pkgsrc
+INLINE should/must be blank based on how it's (inappropriately) used
 
 --- Makefile.orig	2003-03-02 07:07:02.000000000 +0000
 +++ Makefile
@@ -20,7 +20,8 @@ $NetBSD: patch-ac,v 1.2 2005/07/30 11:30:03 grant Exp $
 +#PG = -fomit-frame-pointer
  
  # Optimize flag. 3 is about as high as you can sanely go with GCC3.2.
- OPTIM = -O3
+-OPTIM = -O3
++OPTIM = $(CFLAGS)
  
  # These flags are pretty much mandatory
 -REQUIRED = -DNDEBUG -DINLINE=inline
@@ -43,3 +44,12 @@ $NetBSD: patch-ac,v 1.2 2005/07/30 11:30:03 grant Exp $
  
  NEW_02L_FIXES = -DNEWENCODE -DNEWATAN
  
+@@ -75,7 +75,7 @@ endif
+ 	$(CC) $(CC_SWITCHES) -c $< -o $@
+ 
+ $(PGM):	$(OBJ) Makefile
+-	$(CC) $(PG) -o $(PGM) $(OBJ) $(LIBS)
++	$(CC) $(PG) -o $(PGM) $(OBJ) $(LDFLAGS) $(LIBS)
+ 
+ clean:
+ 	-rm $(OBJ) $(DEP)
