@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.4 2011/10/05 08:38:53 obache Exp $
+$NetBSD: distinfo,v 1.5 2011/10/05 09:23:44 obache Exp $
 
 SHA1 (pidgin-facebookchat-source-1.69.tar.bz2) = a266e8aeb0b61fde2c5d84fcad93c0615b69a76a
 RMD160 (pidgin-facebookchat-source-1.69.tar.bz2) = a38b0576bdd9f7f61156e7720231fa7424366a45
 Size (pidgin-facebookchat-source-1.69.tar.bz2) = 50532 bytes
-SHA1 (patch-aa) = 43e1c7ab640f2d9d261d593a022137b85c0c1542
+SHA1 (patch-aa) = f204b583194de127fa88d722b5d0b0363f18f1ae
