@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.125 2012/04/27 12:32:05 obache Exp $
+# $NetBSD: Makefile,v 1.126 2012/06/14 07:43:16 sbd Exp $
 #
 
 DISTNAME=	epiphany-2.30.6
@@ -21,6 +21,13 @@ USE_LANGUAGES=		c c++
 
 # see pkgsrc/security/mozilla-rootcerts
 CONFIGURE_ARGS+=	--with-ca-file=/etc/ssl/certs/ca-certificates.crt
+
+.include "../../mk/bsd.prefs.mk"
+
+# for backtrace                            
+.if ${OPSYS} == "NetBSD" && exists(/usr/include/execinfo.h)
+LIBS+=	-lexecinfo                              
+.endif                                    
 
 PKGCONFIG_OVERRIDE=	data/epiphany.pc.in
 
